# IMS-NED-28-DSA

./: README.md  setup.bat  start.bat  start.ps1
Front_end/inventory-zen-37-main/: README.md  index.html  tailwind.config.ts
Front_end/inventory-zen-37-main/src/: App.tsx  index.css
Front_end/inventory-zen-37-main/src/components/: Layout.tsx
Front_end/inventory-zen-37-main/src/components/dashboard/: StatsCard.tsx
Front_end/inventory-zen-37-main/src/components/inventory/: ProductDialog.tsx  ProductTable.tsx
Front_end/inventory-zen-37-main/src/pages/: Dashboard.tsx  Inventory.tsx
backend/: CMakeLists.txt  build.bat  build.ps1  build_and_run.bat  main.cpp
frontend/React/: package-lock.json  package.json
frontend/React/src/: App.css  App.jsx
frontend/vite-project/: package-lock.json
